# pluginTest

./: CMakeLists.txt  README.md  abstract_processor.h  library.cpp  library.h  main.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
